# django_planner

./: .gitignore  README.md  pyproject.toml
accounts/: functions.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_designation_alter_user_team.py  0002_teams_object_id_user_object_id_and_more.py  0002_user_fav_color_user_profile_pic.py  0003_alter_teams_deleted_by_alter_teams_updated_by_and_more.py  0003_alter_user_email.py  0003_alter_user_profile_pic.py  0004_user_dob_user_school.py
accounts/static/: accounts-style.css
accounts/templates/: login_form.html  register_form.html  user_info_form.html
comments/: models.py
comments/migrations/: 0001_initial.py  0002_comment_object_id.py  0002_comment_viewed_users_ids.py  0003_alter_comment_deleted_by_alter_comment_updated_by.py
learn/: models.py  urls.py  views.py
learn/migrations/: 0001_initial.py  0002_assessments_ai_response_question_ai_response.py  0002_assessments_title.py  0003_question_learn_content_learn.py  0004_learn_course_alter_question_learn_content.py
learn/templates/: courses.html  home.html  learn.html  learn_dashboard.html  take_assessment.html
main_static/: main.css
management/: middleware.py  models.py
management/migrations/: 0001_initial.py  0002_alter_dropdown_field_alter_dropdown_model_name.py  0002_dropdown_object_id.py  (+2 more)
plan/: asgi.py  settings.py  urls.py  wsgi.py
safe_delete/: apps.py  managers.py  models.py
scripts/: 2024.2.txt
tasks/: admin.py  models.py  urls.py  views.py
templates/: base.html  main.html
utils/: colors.py
(+23 files in other folders)
