[tool.poetry]
name = "plan"
version = "0.1.0"
description = ""
authors = ["Ananthu Krishnan <ananthu.krishnan@beinex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.x"
mysqlclient = "^2.2.4"
fontawesomefree = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
